# metadol

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOLRAC.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES_v0.1.0.md  _DOLv1.md  add.wasm  ast.rs  bootstrap.sh  cer  cerp  claude-flow-dol2-impl.yaml  claude-flow-parser-dol2.yaml  claude-flow-q2-remaining.yaml  container.exists.dol  control-flow-design.md  flow-cmd.sh  genes-design.md  implementation-plan.md  lexer.rs  lib.rs  orchestration.yaml  parser.rs  roadmap.md  test-plan.md
.claude/commands/releases/: README.md  dol-release.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  dol-flywheel-hir.yml  hir-ci.yml  release.yml
HIR-dolv3/: DEVELOPMENT_WORKFLOW.md  TESTING_STRATEGY.md  hir_test_harness.rs  pre-commit  setup-hir-branch.sh
bootstrap-dolv3/: CHANGELOG_v0.3.1.md  CODEGEN_FIXES_REQUIRED.md  Makefile.bootstrap  NEXT_STEPS_ROADMAP.md  bootstrap-fix.sh  bootstrap.yml  setup-v0.3.1.sh
cli-integration-results/: FINAL-REPORT.md  existing-cli-analysis.md
docs/: CLI.md  HIR-MERGE-DECISION.md  HIR_Tutorials.md  MISMATCH_TABLE.md  MLIR-DIALECT.md  PHASE2_ROADMAP.md  SPIRIT-COMPILER.md  VUDO-BIG-PICTURE-ALIGNMENT.md  VUDO-RUNTIME-PLAN.md  getting-started.md  grammar.ebnf  publish_crate.md  sex-system.md  specification.md  syntax-reference.md  wasm-compiler-implementation.md  wasm-tools.md
docs/examples/: biology.md
docs/ontology/: 00-philosophy.md  01-foundations.md  02-primitives.md  03-transformations.md  04-information.md  05-application.md
docs/ontology/prospective/reconciliation/: IMPLEMENTATION_STATUS.md
docs/ontology/prospective/scheduling/: IMPLEMENTATION_STATUS.md
docs/ontology/retrospective/: split_dol.py
docs/tutorials/: 01-getting-started.md  02-writing-genes.md  03-composing-traits.md  04-system-design.md  05-dol2-features.md
docs/wiki/: DOL_Examples_Gallery.md  DOL_Self_Hosting.md  DOL_v0.3.0_Release.md
dol/: lexer.dol
dol/hir/: DOL-v0.3.0-LANGUAGE-DECISIONS.md  dol-hir-types-v2.dol
examples/: README_TESTING.md  compiler_demo.rs  echo.dol  sex_basic.dol  sex_error.dol  sex_imports.dol  sex_local.dol  wasm_basic.rs
examples/constraints/: container.integrity.dol  identity.immutable.dol
examples/evolutions/: container.lifecycle.v0.0.2.dol  identity.cryptographic.v0.0.2.dol
examples/genes/: hello.world.dol  identity.cryptographic.dol  network.core.dol
examples/src/: error.rs  parser.rs  pratt.rs  test_parser.rs  validator.rs
examples/src/codegen/: mod.rs
examples/src/macros/: mod.rs
examples/src/mcp/: tools.rs
examples/src/mlir/: context.rs  mod.rs
examples/src/sex/: context.rs
examples/src/transform/: fold.rs  visitor.rs
examples/src/wasm/: compiler.rs  runtime.rs
examples/stdlib/biology/: ecosystem.dol  evolution.dol  hyphal.dol  mycelium.dol  transport.dol
examples/systems/: bounded.counter.dol  bounded_counter___0_1_0.dol  greeting.service.dol  greeting_service___0_1_0.dol  univrs.orchestrator.dol  univrs.scheduler.dol
examples/traits/: container.networking.dol  countable.dol  node.discovery.dol
flywheel/: claude-flow-hir-development.yaml
flywheel/v1/: Makefile  dol-flywheel.yml  flywheel.sh  metrics.sh
scripts/: fix-21-perfect.sh  hir-completion-check.sh  phase0-clean.sh  status.sh
scripts/archived/: add_imports.sh  bootest.sh  clean_files.sh  cleanup.sh  crt_validation.sh  diag28.sh  exact.sh  fix-21-precise.sh  fix-21-simple.sh  fix-21-surgical.sh  redirect.sh  regen_modules.sh  show_errors.sh  v030_diagn.sh
src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  pratt.rs  reflect.rs  typechecker.rs  validator.rs
src/codegen/: hir_rust.rs  jsonschema.rs  mod.rs  rust.rs  typescript.rs
src/compiler/: mod.rs  spirit.rs
src/eval/: builtins.rs  interpreter.rs  mod.rs  value.rs
src/hir/: desugar.rs  mod.rs  print.rs  span.rs  symbol.rs  types.rs  validate.rs  visit.rs
src/lower/: context.rs  decl.rs  desugar.rs  expr.rs  mod.rs  stmt.rs
src/macros/: builtin.rs  expand.rs
src/mcp/: mod.rs  server.rs
src/mlir/: codegen.rs  lowering.rs  mod.rs  ops.rs  types.rs
src/sex/: lint.rs  mod.rs  tracking.rs
src/transform/: desugar_idiom.rs  fold.rs  mod.rs  passes.rs  visitor.rs
src/wasm/: alloc.rs  compiler.rs  layout.rs  mod.rs  runtime.rs
stage1/src/: ast.rs  codegen.rs  lexer.rs  main.rs  main_gen.rs  parser.rs  token.rs  typechecker.rs  types.rs
status-do/: README.md
stdlib/: constraint.transfer-spec.md  constraint.transfer.dol  constraint.transfer_invariants.dol  constraint.transfer_result.dol  constraint.transferability.dol  gene.map.dol  gene.map_preserving.dol  gene.map_strict.dol  operator.precedence.md  traits.applicative-spec.md  traits.applicative.dol  traits.functor-spec.md  traits.functor.dol  traits.monad-spec.md  traits.monad.dol
test-cases/level2-basic/: locals_test.dol
test-cases/level3-types/: gene_methods_test.dol
test-cases/level4-control/: if_else_test.dol  loop_test.dol
test-cases/level5-advanced/: trait_impl_test.dol
tests/: adaptive_tests.rs  ast_structure.rs  biology_tests.rs  codegen_golden.rs  codegen_operators_test.rs  codegen_rust_tests.rs  codegen_unit.rs  compiler_e2e.rs  compiler_integration.rs  dol2_tests.rs  error_handling.rs  expr_comprehensive.rs  idiom_tests.rs  integration_comprehensive.rs  integration_tests.rs  lexer_exhaustive.rs  lexer_stress.rs  lexer_tests.rs  parser_exhaustive.rs  parser_stress.rs  parser_tests.rs  quote_tests.rs  reflect_tests.rs  sex_tests.rs  stress_tests.rs  typechecker_exhaustive.rs  validator_unit.rs  wasm_debug.rs  wasm_execution.rs  wasm_test_helpers.rs
tests/corpus/genes/: complex_constraints.dol  evolution_chain.dol  nested_generics.dol
tests/corpus/sex/: nested_sex.dol
tests/corpus/traits/: trait_relationships.dol
tests/fixtures/invalid/: syntax_error.dol  type_error.dol  undefined_variable.dol
tests/fixtures/valid/: function_control_flow.dol  gene_basic.dol  gene_with_methods.dol  pattern_matching.dol  pipe_operators.dol
(+35 files in other folders)
