[package]
name = "dol-parse"
version = "0.0.1"
edition = "2024"
authors = ["Univrs <eng@univrs.io>"]
description = "Metal DOL (Design Ontology Language) parser and AST"
license = "Apache-2.0"
repository = "https://github.com/univrs/dol"
keywords = ["dol", "parser", "ontology", "dsl"]
categories = ["parsing", "development-tools"]

[lib]
name = "dol_parse"
path = "src/lib.rs"

[[bin]]
name = "dol"
path = "src/main.rs"

[dependencies]
# Lexer - LLVM-style token generation
logos = "0.14"

# Parser - LR(1) parser generator (LLVM-inspired)
lalrpop-util = "0.20"
regex = "1"

# AST and IR
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error reporting - LLVM-style diagnostics
ariadne = "0.4"
codespan-reporting = "0.11"

# CLI
clap = { version = "4", features = ["derive"] }

# File watching for tooling
notify = "6"

# Semantic versioning for evolution tracking
semver = "1.0"

[build-dependencies]
lalrpop = "0.20"

[dev-dependencies]
insta = "1.34"
pretty_assertions = "1.4"

[features]
default = []
llvm-ir = []  # Future: emit LLVM IR for constraint verification
