[package]
name = "metadol"
version = "0.0.1"
edition = "2021"
rust-version = "1.81"
authors = ["Univrs <hello@univrs.io>"]
description = "Metal DOL (Design Ontology Language) - A declarative specification language for ontology-first development"
documentation = "https://docs.rs/metadol"
homepage = "https://github.com/univrs/metadol"
repository = "https://github.com/univrs/metadol"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["dsl", "ontology", "specification", "parser", "language"]
categories = ["development-tools", "parser-implementations", "command-line-utilities"]
exclude = [
    ".github/",
    "docs/tutorials/",
    "examples/*.test",
]

[lib]
name = "metadol"
path = "src/lib.rs"

[[bin]]
name = "dol-parse"
path = "src/bin/dol-parse.rs"
required-features = ["cli"]

[[bin]]
name = "dol-test"
path = "src/bin/dol-test.rs"
required-features = ["cli"]

[[bin]]
name = "dol-check"
path = "src/bin/dol-check.rs"
required-features = ["cli"]

[[bin]]
name = "dol-codegen"
path = "src/bin/dol-codegen.rs"
required-features = ["cli"]

[[bin]]
name = "dol-mcp"
path = "src/bin/dol-mcp.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap", "dep:anyhow", "dep:colored", "serde"]
serde = ["dep:serde", "dep:serde_json"]
mlir = ["melior"]
wasm = ["mlir", "wasmtime"]

[dependencies]
# Core dependencies
thiserror = "1.0"
logos = "0.14"  # Fast lexer generator

# Optional: CLI support
clap = { version = "4.4", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
colored = { version = "2.1", optional = true }

# Optional: Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Optional: MLIR code generation
melior = { version = "0.18", optional = true }

# Optional: WASM compilation and runtime
wasmtime = { version = "21", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
insta = "1.34"  # Snapshot testing
criterion = "0.5"  # Benchmarking
tempfile = "3.9"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1

# Benchmarks will be added in a future phase
# [[bench]]
# name = "parser_bench"
# harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }
