[package]
name = "dol"
version = "0.6.0"
edition = "2021"
rust-version = "1.81"
authors = ["Univrs <ardeshir.org@gmail.com>"]
description = "DOL (Design Ontology Language) - A declarative specification language for ontology-first development"
documentation = "https://docs.rs/dol"
homepage = "https://github.com/univrs/dol"
repository = "https://github.com/univrs/dol"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["dsl", "ontology", "specification", "parser", "language"]
categories = ["development-tools", "parser-implementations", "command-line-utilities"]
exclude = [
    ".github/",
    "docs/tutorials/",
    "examples/*.test",
]

[lib]
name = "metadol"
path = "src/lib.rs"

[[bin]]
name = "dol-parse"
path = "src/bin/dol-parse.rs"
required-features = ["cli"]

[[bin]]
name = "dol-test"
path = "src/bin/dol-test.rs"
required-features = ["cli"]

[[bin]]
name = "dol-check"
path = "src/bin/dol-check.rs"
required-features = ["cli"]

[[bin]]
name = "dol-codegen"
path = "src/bin/dol-codegen.rs"
required-features = ["cli"]

[[bin]]
name = "dol-mcp"
path = "src/bin/dol-mcp.rs"
required-features = ["cli"]

[[bin]]
name = "dol-build-crate"
path = "src/bin/dol-build-crate.rs"
required-features = ["cli"]

[[bin]]
name = "dol-migrate"
path = "src/bin/dol-migrate.rs"
required-features = ["cli"]

[[bin]]
name = "vudo"
path = "src/bin/vudo.rs"
required-features = ["vudo"]

[features]
default = []
cli = ["dep:clap", "dep:anyhow", "dep:colored", "dep:regex", "serde"]
serde = ["dep:serde", "dep:serde_json"]
mlir = ["melior"]
wasm = ["wasmtime", "wasm-encoder"]
wasm-mlir = ["wasm", "mlir"]
vudo = ["cli", "wasm"]

[dependencies]
# Core dependencies
thiserror = "1.0"
logos = "0.14"  # Fast lexer generator

# Pin home to avoid edition 2024 requirement (melior dependency)
home = "=0.5.9"

# Optional: CLI support
clap = { version = "4.4", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
colored = { version = "2.1", optional = true }
regex = { version = "1", optional = true }

# Optional: Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Optional: MLIR code generation
melior = { version = "0.18", optional = true }

# Optional: WASM compilation and runtime
wasmtime = { version = "21", optional = true }
wasm-encoder = { version = "0.41", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
insta = "1.34"  # Snapshot testing
criterion = "0.5"  # Benchmarking
tempfile = "3.9"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1

[[example]]
name = "compile_counter"
required-features = ["wasm"]

# Benchmarks will be added in a future phase
# [[bench]]
# name = "parser_bench"
# harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }
